// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing the Connection page rendering render Connection in english 1`] = `
<div>
  <div>
    <br />
    <div
      class="card text-white bg-dark box-center"
    >
      <div
        class="card-body bg-dark item-align text-align"
      >
        <h5
          class="card-title text-align"
        >
          Authentication
        </h5>
        <p
          class="card-text"
        >
          Please enter an email and a password to continue
        </p>
        <div
          class="input-group mb-3"
        >
          <div
            class="input-group-prepend"
          >
            <span
              class="input-group-text"
              id="inputGroup-sizing-default"
            >
              Email
            </span>
          </div>
          <input
            aria-label="Email"
            class="form-control"
            type="text"
            value=""
          />
        </div>
        <div
          class="input-group mb-3"
        >
          <div
            class="input-group-prepend"
          >
            <span
              class="input-group-text"
              id="inputGroup-sizing-default"
            >
              Password
            </span>
          </div>
          <input
            aria-label="Email"
            class="form-control"
            type="password"
            value=""
          />
        </div>
        <button
          class="btn btn-primary"
          type="button"
        >
          Continue
        </button>
         
        <br />
      </div>
    </div>
    <br />
    <span>
      You don't have an account ?
    </span>
     
    <br />
    <a
      href="/DataCollect"
    >
      <button
        class="btn button-footer btn-primary"
        type="button"
      >
        Create an account
      </button>
    </a>
  </div>
</div>
`;

exports[`Testing the Connection page rendering render Connection in french 1`] = `
<div>
  <div>
    <br />
    <div
      class="card text-white bg-dark box-center"
    >
      <div
        class="card-body bg-dark item-align text-align"
      >
        <h5
          class="card-title text-align"
        >
          Authentification
        </h5>
        <p
          class="card-text"
        >
          Merci de rentrer votre email et votre mot de passe pour continuer
        </p>
        <div
          class="input-group mb-3"
        >
          <div
            class="input-group-prepend"
          >
            <span
              class="input-group-text"
              id="inputGroup-sizing-default"
            >
              Email
            </span>
          </div>
          <input
            aria-label="Email"
            class="form-control"
            type="text"
            value=""
          />
        </div>
        <div
          class="input-group mb-3"
        >
          <div
            class="input-group-prepend"
          >
            <span
              class="input-group-text"
              id="inputGroup-sizing-default"
            >
              Mot de passe
            </span>
          </div>
          <input
            aria-label="Email"
            class="form-control"
            type="password"
            value=""
          />
        </div>
        <button
          class="btn btn-primary"
          type="button"
        >
          Continuer
        </button>
         
        <br />
      </div>
    </div>
    <br />
    <span>
      Vous n'avez pas de compte ?
    </span>
     
    <br />
    <a
      href="/DataCollect"
    >
      <button
        class="btn button-footer btn-primary"
        type="button"
      >
        Créer un compte
      </button>
    </a>
  </div>
</div>
`;

exports[`Testing the Connection page rendering renders Connection without crashing in any language 1`] = `
<div>
  <div>
    <br />
    <div
      class="card text-white bg-dark box-center"
    >
      <div
        class="card-body bg-dark item-align text-align"
      >
        <h5
          class="card-title text-align"
        >
          Authentification
        </h5>
        <p
          class="card-text"
        >
          Merci de rentrer votre email et votre mot de passe pour continuer
        </p>
        <div
          class="input-group mb-3"
        >
          <div
            class="input-group-prepend"
          >
            <span
              class="input-group-text"
              id="inputGroup-sizing-default"
            >
              Email
            </span>
          </div>
          <input
            aria-label="Email"
            class="form-control"
            type="text"
            value=""
          />
        </div>
        <div
          class="input-group mb-3"
        >
          <div
            class="input-group-prepend"
          >
            <span
              class="input-group-text"
              id="inputGroup-sizing-default"
            >
              Mot de passe
            </span>
          </div>
          <input
            aria-label="Email"
            class="form-control"
            type="password"
            value=""
          />
        </div>
        <button
          class="btn btn-primary"
          type="button"
        >
          Continuer
        </button>
         
        <br />
      </div>
    </div>
    <br />
    <span>
      Vous n'avez pas de compte ?
    </span>
     
    <br />
    <a
      href="/DataCollect"
    >
      <button
        class="btn button-footer btn-primary"
        type="button"
      >
        Créer un compte
      </button>
    </a>
  </div>
</div>
`;
